--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,11 @@
 			<artifactId>ij</artifactId>
 			<version>1.53c</version>
 		</dependency>
+		<dependency>
+    <groupId>io.jsonwebtoken</groupId>
+    <artifactId>jjwt-api</artifactId>
+    <version>0.11.5</version>
+</dependency>
 	</dependencies>
 
 	<build>
