--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 #
 # JDBC Properties
 #
-spring.datasource.url = jdbc:mysql://5.183.9.94:3306/isae_desarrollo?serverTimezone=UTC&rewriteBatchedStatements=true
+#spring.datasource.url = jdbc:mysql://5.183.9.94:3306/isae_desarrollo?serverTimezone=UTC&rewriteBatchedStatements=true
+spring.datasource.url = jdbc:mysql://5.183.9.94:3306/isae_pruebas?serverTimezone=UTC&rewriteBatchedStatements=true
 #direccion de la base de datos, puede variar el puerto y nombre de la bd
 
 spring.datasource.username=danaeisae
@@ -16,8 +17,10 @@ spring.datasource.hikari.maxLifeTime: 60000
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.protocol=smtp
-spring.mail.username=c.alejandromarquez@gmail.com
-spring.mail.password=oxaupqfyhcdktsnc
+#spring.mail.username=c.alejandromarquez@gmail.com
+#spring.mail.password=oxaupqfyhcdktsnc
+spring.mail.username=danaenoreply@gmail.com
+spring.mail.password=lntuevizycpiwhck
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
