--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #
 # JDBC Properties
 #
-#spring.datasource.url = jdbc:mysql://5.183.9.94:3306/isae_desarrollo?serverTimezone=UTC&rewriteBatchedStatements=true
-spring.datasource.url = jdbc:mysql://5.183.9.94:3306/isae_pruebas?serverTimezone=UTC&rewriteBatchedStatements=true
+spring.datasource.url = jdbc:mysql://5.183.9.94:3306/isae_desarrollo?serverTimezone=UTC&rewriteBatchedStatements=true
+#spring.datasource.url = jdbc:mysql://5.183.9.94:3306/isae_pruebas?serverTimezone=UTC&rewriteBatchedStatements=true
 #direccion de la base de datos, puede variar el puerto y nombre de la bd
 
 spring.datasource.username=danaeisae
