--- a/pom.xml
+++ b/pom.xml
@@ -27,11 +27,11 @@
 			<artifactId>jasperreports</artifactId>
 			<version>6.6.0</version>
 		</dependency>
-		<dependency>
+		<!--<dependency>
 			<groupId>net.sf.jasperreports</groupId>
 			<artifactId>jasperreports-fonts</artifactId>
 			<version>6.0.0</version>
-		</dependency>
+		</dependency>-->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context-support</artifactId>
